@@ -1,5 +1,8 @@
 2006-02-12  Ales Hakl  <ales at hakl dot net>
 
+	* src/strings.c (dfsch_string_utf8_for_each): user selectable
+	handling of invalid bytes in utf-8 string
+
 	* dfsch/dfsch.h: Removed remains of DFSCH_THROW
 
 2006-02-11  Ales Hakl  <ales at hakl dot net>
